# ai-agents-udemy-course

./: .gitignore  AGENT_README_GUIDE.md  README.md  deno.json  dockerfile-postgress  ruff.toml
dspy/: .env.example  PORTING_LANGGRAPH_TO_DSPY.md  blog-writer.ipynb  comedian-agent.ipynb  comedian.json  dspy-quickstart.ipynb  invoice-extractor.ipynb  invoice_ner_dataset.csv
dspy/blogwriter/: blog-writer.ipynb
dspy/comedian/: comedian-agent.ipynb
dspy/comedian_program/: program.pkl
dspy/competitor_monitoring_agent/: README.md  competitor-monitoring-agent.ipynb
dspy/customer_support_agent/: README.md  customer-support-agent.ipynb
dspy/financial_analyst_agent/: README.md  financial_analyst.ipynb
dspy/invoice_extractor_agent/: README.md  invoice-extractor.ipynb  invoice_ner_clean.csv
dspy/invoice_program/: program.pkl
dspy/joke_generator_agent/: README.md  comedian-agent.ipynb  evaluation_results.csv
dspy/life_coach_agent/: README.md  docker-compose.yml  life-coach-agent.ipynb  mem0-dspy-tutorial.ipynb
dspy/marketing_blog_agent/: README.md  blog-writer.ipynb
dspy/open_deep_research/: README.md  deep-researcher.ipynb
dspy/quickstart/: dspy-quickstart-intro.ipynb  dspy-quickstart-optimizer.ipynb  dspy-quickstart.ipynb
dspy/video_generation_agent/: README.md  video-generation-agent.ipynb
dspy/video_reaction_agent/: README.md  video-response-generator-dag.ipynb
dspy/video_response_generator_dag_agent/: video-response-generator-dag.ipynb
langgraph/: README.md  comprehensive-langgraph-tutorial.ipynb  quick-start-for-langgraph.ipynb
langgraph/competitor_monitoring_agent/: .env.example  README.md  docker-compose.yml  langgraph.json  pyproject.toml  run_graph.py
langgraph/customer_support_agent/: README.md  pyproject.toml  run_graph.py
langgraph/customer_support_agent_mem0/: README.md  docker-compose.yml  my_workflow_2.json  pyproject.toml  run_graph.py
langgraph/financial_analyst_agent/: .env.example  README.md  pyproject.toml  run_graph.py
langgraph/invoice_extraction_agent/: README.md  pyproject.toml  run_graph.py  run_graph_against_csv.py
langgraph/joke_generator/: .env.example  README.md  evaluation_demo.py  example_usage.py  professional_jokes_dataset.py  pyproject.toml  run_graph.py  test_joke_generator.py
langgraph/langgraph-cloud-template/: .env.example  pyproject.toml
langgraph/marketing_blog_agent/: .env.example  README.md  pyproject.toml  run_graph.py
langgraph/open_deep_research/: .env.example  README.md  langgraph.json  pyproject.toml
langgraph/open_deep_research/src/agent/: __init__.py  configuration.py  deep_researcher.py  graph.py  models.py  prompts.py  state.py  utils.py
langgraph/personal_coach_agent_with_mem0/: .env.example  README.md  docker-compose.yml  pyproject.toml
langgraph/testimonial_video_generator/: .env.example  README.md  pyproject.toml  run_graph.py
langgraph/video_generation_agent/: .env.example  README.md  main.py  mypy.ini  pyproject.toml  video_inputs_within_chat_messages.ipynb
langgraph/video_generation_agent_complex/: .env.example  README.md  main.py  mypy.ini  pyproject.toml
langgraph/video_generation_agent_complex/src/agent/: __init__.py  graph.py  media_assets.py  models.py  tools.py
langgraph/video_response_generator_dag_agent/: .env.example  README.md  pyproject.toml
n8n/: blog_writer_agent.json  competitor_monitoring.json  cs_agent.json  deep_research_agent.json  financial_analyst_agent.json  image_generation_tool.json  invoice_extractor_agent.json  joke_generator.json  personal coach (1).json  personal_coach.json  testimonial_video_generator_agent.json  video_generation_agent.json  video_generation_tool.json
(+51 files in other folders)
